# SDL2CMake

./: CMakeLists.txt  CMakeSettings.json
src/: main.c
